Fixed header on mobile for index.html

--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -99,7 +99,7 @@ body {
   }
 
   .clock {
-    display: none;
+    display: flex;
   }
 
   .navigation a {
